--- a/projects/hibernate/pom.xml
+++ b/projects/hibernate/pom.xml
@@ -50,7 +50,11 @@
       <artifactId>jaxb-impl</artifactId>
       <version>2.3.3</version>
     </dependency>
-
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
